<resources>

    <string name="app_name">cBin</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_activity_item_bin_details">ItemBinDetails</string>


    <!--Login view-->
    <string name="title">cBin</string>
    <string name="sub">TM</string>
    <string name="email">Email ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot">Forgot Password ?</string>

    <!--Home view-->
    <string name="title_head_home">My Replenishment Tasks"</string>
    <string name="title_activity_home">Today Consumption Patterns</string>

    <!--Change Password view-->
    <string name="old_pwd">Old Password</string>
    <string name="new_pwd">New Password</string>
    <string name="confirm_pwd">Confirm Password</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    
    <!--User Profile View-->
    <string name="name_text">Name</string>
    <string name="email_text">Email</string>
    <string name="designation_text">Designation</string>
    <string name="colen">:</string>
    <string name="change_password">Change Password</string>

    <!--User Profile View-->
    <string name="date">Date</string>
    <string name="quantity">Quantity</string>
    <string name="percentage">%</string>

    <!--Item bin details view-->
    <string name="name">Name :</string>
    <string name="dimension">Dimension</string>
    <string name="in_mm">(in mm) :</string>
    <string name="material">Material :</string>
    <string name="units">Units :</string>
    <string name="surface">Surface :</string>
    <string name="availablity">Availablity :</string>

    <string name="bin_details">Bin Details</string>
    <string name="item_details">Item Details"</string>
    <string name="alert_settings">Alert Settings"</string>
    <string name="replenishment_task">Replenishment Task"</string>
    <string name="replenishment_history">Replenishment History</string>
    <string name="cbin_movement_history">cBin Movement History</string>

    <string name="on">On</string>
    <string name="sl_no">Sl No</string>
    <string name="location">Location</string>

    <string name="bin_name">Bin Name :</string>
    <string name="bin_type">Bin Type :</string>
    <string name="cbin_identification">cBin Identifier :</string>
    <string name="rfid">RFID :</string>
    <string name="location_text">Location :</string>

    <string name="notification_alert">Notification Alert % :</string>
    <string name="alert_enable">Alert Enable :</string>
    <string name="item_change">Item Change Alert Enable :</string>
    
    <string name="quantity_text">Quantity :</string>
    <string name="percentage_text">Percentage :</string>
    <string name="trigged_text">Triggered On :</string>

    <!--Report view-->
    <string name="no_of_action">Number of Action cBins</string>
    <string name="on_time">On-Time Replenishment %</string>
    <string name="avg_repl">Average Replenishment Batch %</string>
    <string name="top_5">Top 5 Items</string>
    <string name="repl_count">Replenishment Count</string>

    <string name="sort_by">Sort by</string>
    <string name="asc">asc</string>
    <string name="desc">desc</string>
</resources>
