<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/transparent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:padding="5dp"
            android:id="@+id/cbinTitle">

            <TextView
                android:text="@string/on"
                android:id="@+id/CtriggeredOn"
                android:layout_width="wrap_content"
                android:textSize="@dimen/size_15"
                android:layout_height="wrap_content"
                android:textColor="@color/name"
                android:layout_weight="0.6"
                android:gravity="fill_horizontal"/>

            <TextView
                android:id="@+id/Cslno"
                android:layout_width="wrap_content"
                android:text="@string/sl_no"
                android:layout_weight="1"
                android:textSize="@dimen/size_15"
                android:layout_height="wrap_content"
                android:textColor="@color/name"
                android:gravity="fill_horizontal" />

            <TextView
                android:id="@+id/Clocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/size_15"
                android:text="@string/location"
                android:textColor="@color/name"
                android:layout_weight="1"
                android:gravity="fill_horizontal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/cbinTitle">

            <ListView
                android:id="@+id/cbinMovement"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/selector"
                android:listSelector="@android:color/transparent"
                android:divider="@color/transparent"
                android:dividerHeight="1dp">

            </ListView>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>