<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5"
        android:background="@color/transparent_1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_marginRight="@dimen/margin_5"
            android:layout_marginBottom="@dimen/size_8"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="1"
            android:id="@+id/binLayout1">

            <TextView
                android:text="@string/bin_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/name"
                android:layout_weight="0.25"
                android:textSize="@dimen/size_15"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:textStyle="bold"
                android:gravity="left"/>

            <TextView
                android:id="@+id/binName"
                android:layout_width="0dp"
                android:layout_weight="0.75"
                android:textSize="@dimen/size_15"
                android:layout_height="wrap_content"
                android:layout_marginRight="5sp"
                android:textColor="@color/name"
                android:gravity="left"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_marginRight="@dimen/margin_5"
            android:layout_marginBottom="@dimen/size_8"
            android:id="@+id/binLayout2"
            android:layout_weight="1"
            android:weightSum="1"
            android:layout_below="@id/binLayout1">

            <TextView
                android:text="@string/bin_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/name"
                android:layout_weight="0.25"
                android:textSize="@dimen/size_15"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:textStyle="bold"
                android:layout_gravity="left"/>

            <TextView
                android:id="@+id/binType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/size_15"
                android:layout_weight="0.15"
                android:layout_marginRight="5sp"
                android:textColor="@color/name"
                android:layout_gravity="left" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dimension"
                android:textSize="@dimen/size_15"
                android:layout_weight="0.25"
                android:textColor="@color/name"
                android:layout_marginLeft="5sp"
                android:textStyle="bold"
                android:layout_gravity="right"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/in_mm"
                android:textSize="@dimen/size_8"
                android:layout_weight="0.15"
                android:textColor="@color/name"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textStyle="bold"
                android:layout_gravity="right"/>

            <TextView
                android:id="@+id/binDimension"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/size_15"
                android:layout_weight="0.3"
                android:textColor="@color/name"
                android:layout_marginRight="5dp"
                android:layout_gravity="left"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_marginRight="@dimen/margin_5"
            android:layout_marginBottom="@dimen/size_8"
            android:id="@+id/binLayout3"
            android:layout_weight="1"
            android:weightSum="1"
            android:layout_below="@+id/binLayout2"
            android:layout_gravity="left">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/location_text"
                android:textSize="@dimen/size_15"
                android:layout_weight="0.2"
                android:textColor="@color/name"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:textStyle="bold"
                android:gravity="left"/>

            <TextView
                android:id="@+id/binLocation"
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:textSize="@dimen/size_15"
                android:layout_height="wrap_content"
                android:textColor="@color/name"
                android:layout_marginRight="5sp"
                android:gravity="left"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_marginRight="@dimen/margin_5"
            android:layout_marginBottom="@dimen/size_8"
            android:id="@+id/binLayout4"
            android:layout_weight="1"
            android:weightSum="1"
            android:layout_below="@id/binLayout3">

            <TextView
                android:text="@string/cbin_identification"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/size_15"
                android:layout_weight="0.33"
                android:textColor="@color/name"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:textStyle="bold"
                android:gravity="left"/>

            <TextView
                android:id="@+id/cBinIdentity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/size_15"
                android:layout_weight="0.67"
                android:textColor="@color/name"
                android:layout_marginRight="5dp"
                android:gravity="left" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_marginRight="@dimen/margin_5"
            android:layout_marginBottom="@dimen/size_8"
            android:id="@+id/binLayout5"
            android:layout_weight="1"
            android:weightSum="1"
            android:layout_below="@id/binLayout4">

            <TextView
                android:text="@string/rfid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/name"
                android:layout_weight="0.15"
                android:textSize="@dimen/size_15"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:textStyle="bold"
                android:gravity="left"/>

            <TextView
                android:id="@+id/rfid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/name"
                android:layout_weight="0.85"
                android:layout_marginRight="5sp"
                android:gravity="left"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>