<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="4"
        android:background="@color/transparent_1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_marginBottom="@dimen/size_8"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="1"
            android:id="@+id/itemLayout1">

            <TextView
                android:text="@string/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:textColor="@color/name"
                android:textSize="@dimen/margin_15"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:textStyle="bold"
                android:gravity="left"/>

            <TextView
                android:id="@+id/itemName"
                android:layout_width="0dp"
                android:textColor="@color/name"
                android:layout_weight="0.85"
                android:textSize="@dimen/margin_15"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:gravity="left" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_5"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_marginBottom="@dimen/size_8"
            android:id="@+id/itemLayout2"
            android:layout_weight="1"
            android:weightSum="1"
            android:layout_below="@id/itemLayout1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dimension"
                android:layout_weight="0.25"
                android:textColor="@color/name"
                android:textSize="@dimen/margin_15"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"
                android:gravity="left"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/in_mm"
                android:textSize="@dimen/size_8"
                android:layout_weight="0.1"
                android:textColor="@color/name"
                android:layout_marginRight="5dp"
                android:textStyle="bold"
                android:gravity="left"/>

            <TextView
                android:id="@+id/itemDimension"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"
                android:textSize="@dimen/margin_15"
                android:textColor="@color/name"
                android:layout_marginRight="5sp"
                android:gravity="left"/>

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="Volume"-->
                <!--android:visibility="invisible"-->
                <!--android:textColor="@color/name"-->
                <!--android:layout_marginLeft="5sp"-->
                <!--android:textStyle="bold"-->
                <!--android:gravity="center"/>-->

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:visibility="invisible"-->
                <!--android:textSize="8dp"-->
                <!--android:textColor="@color/name"-->
                <!--android:layout_marginLeft="5dp"-->
                <!--android:layout_marginRight="5dp"-->
                <!--android:textStyle="bold"-->
                <!--android:gravity="center"/>-->

            <!--<TextView-->
                <!--android:id="@+id/itemVolume"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:textColor="@color/name"-->
                <!--android:visibility="invisible"-->
                <!--android:layout_marginLeft="5dp"-->
                <!--android:layout_marginRight="5dp"-->
                <!--android:gravity="center"/>-->

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_5"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_marginBottom="@dimen/size_8"
            android:id="@+id/ItemLayout3"
            android:layout_weight="1"
            android:weightSum="1"
            android:layout_below="@id/itemLayout2">

            <TextView
                android:text="@string/material"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/name"
                android:layout_weight="0.22"
                android:textSize="@dimen/margin_15"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:textStyle="bold"
                android:layout_gravity="left"/>

            <TextView
                android:id="@+id/material"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/name"
                android:layout_weight="0.3"
                android:textSize="@dimen/margin_15"
                android:layout_marginRight="5sp"
                android:layout_gravity="left" />

            <TextView
                android:text="@string/units"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/margin_15"
                android:layout_weight="0.18"
                android:textColor="@color/name"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:textStyle="bold"
                android:layout_gravity="right"/>

            <TextView
                android:id="@+id/units"
                android:layout_width="0dp"
                android:textColor="@color/name"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:textSize="@dimen/margin_15"
                android:layout_marginRight="5dp"
                android:layout_gravity="right" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_5"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_marginBottom="@dimen/size_8"
            android:id="@+id/ItemLayout4"
            android:visibility="gone"
            android:layout_weight="1"
            android:weightSum="1"
            android:layout_below="@id/ItemLayout3">

            <TextView
                android:text="@string/surface"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:textColor="@color/name"
                android:textSize="@dimen/margin_15"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:textStyle="bold"
                android:gravity="left"/>

            <TextView
                android:id="@+id/surface"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:textSize="@dimen/margin_15"
                android:layout_marginRight="5sp"
                android:textColor="@color/name"
                android:gravity="left" />

            <TextView
                android:text="@string/availablity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/name"
                android:layout_weight="0.3"
                android:textSize="@dimen/margin_15"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:textStyle="bold"
                android:gravity="left"/>

            <TextView
                android:id="@+id/availability"
                android:layout_width="0dp"
                android:textColor="@color/name"
                android:layout_weight="0.2"
                android:layout_height="wrap_content"
                android:textSize="@dimen/margin_15"
                android:layout_marginRight="5sp"
                android:gravity="left" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>