<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/transparent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2"
        android:background="@color/transparent_1">

        <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="horizontal"
           android:paddingTop="@dimen/margin_5"
           android:paddingLeft="@dimen/margin_5"
           android:paddingRight="@dimen/margin_5"
           android:paddingBottom="@dimen/margin_5"
           android:layout_weight="1"
           android:weightSum="1"
           android:id="@+id/triggeredOnLayout">

           <TextView
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:text="@string/trigged_text"
               android:textStyle="bold"
               android:layout_weight="0.32"
               android:textSize="@dimen/size_15"
               android:textColor="@color/name"
               android:layout_marginLeft="5dp"
               android:layout_marginRight="5dp"
               android:gravity="left"/>

           <TextView
               android:id="@+id/triggeredOn"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:textSize="@dimen/size_15"
               android:layout_weight="0.68"
               android:textColor="@color/name"
               android:gravity="left"/>

       </LinearLayout>

        <LinearLayout
            android:id="@+id/qtyLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/margin_5"
            android:paddingRight="@dimen/margin_5"
            android:paddingBottom="@dimen/margin_5"
            android:layout_weight="1"
            android:weightSum="1"
            android:orientation="horizontal"
            android:layout_below="@+id/triggeredOnLayout">

            <TextView
                android:text="@string/quantity_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:textSize="@dimen/size_15"
                android:layout_weight="0.25"
                android:textStyle="bold"
                android:layout_gravity="left"
                android:textColor="@color/name"/>

            <TextView
                android:id="@+id/quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:textSize="@dimen/size_15"
                android:layout_marginRight="5dp"
                android:layout_gravity="left"
                android:textColor="@color/name"/>

            <TextView
                android:text="@string/percentage_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_weight="0.3"
                android:textSize="@dimen/size_15"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:layout_gravity="right"
                android:textColor="@color/name"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/percentage"
                android:textSize="@dimen/size_15"
                android:layout_weight="0.25"
                android:layout_marginRight="5dp"
                android:layout_gravity="right"
                android:textColor="@color/name"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>